Implemented boolean expression parsing and fixed null handling with std::lineNumber